# test_task

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.pytest  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
api/v1/: urls.py
apps/account/: urls.py
apps/account/admin/: transaction.py  wallet.py
apps/account/api/v1/serializers/: __init__.py  transaction.py  wallet.py
apps/account/api/v1/views/: __init__.py  transaction.py  wallet.py
apps/account/exceptions/: __init__.py  transaction.py  wallet.py
apps/account/filters/: __init__.py  transaction.py  wallet.py
apps/account/migrations/: 0001_initial.py
apps/account/models/: __init__.py  transaction.py  wallet.py
apps/account/services/: __init__.py  transaction.py  wallet.py
apps/common/: constants.py  exceptions.py  managers.py  middlewares.py  mixins.py
apps/healthcheck/: urls.py
apps/healthcheck/api/v1/: serializers.py  views.py
config/: urls.py
config/settings/: base.py  test.py
tests/test_models/: test_transaction.py  test_wallet.py
tests/test_services/: test_transaction.py  test_wallet.py
tests/test_views/: test_transaction.py  test_wallet.py
utils/: env_config.py
